# AoC

2020/: .gitignore  aoc2020.cabal
2020/days/: day01.hs
