cabal-version:       >=1.10

name:                aoc2020 
version:             0.1.0.0
build-type:          Simple

executable day01
  main-is:             days/day01.hs
  build-depends:       base >=4.12 && <4.13, megaparsec >=9.0.1 && < 9.0.2, text
  default-language:    Haskell2010

executable day02
  main-is:             days/day02.hs
  build-depends:       base >=4.12 && <4.13, megaparsec >=9.0.1 && < 9.0.2, text
  default-language:    Haskell2010
