cabal-version:       >=1.10

name:                aoc2020 
version:             0.1.0.0
build-type:          Simple

executable day01
  main-is:             days/day01.hs
  build-depends:       base >=4.12 && <4.13, megaparsec >=9.0.1 && < 9.0.2, text
  default-language:    Haskell2010

executable day02
  main-is:             days/day02.hs
  build-depends:       base >=4.12 && <4.13, megaparsec >=9.0.1 && < 9.0.2, text
  default-language:    Haskell2010

executable day08
  main-is:             days/day08.hs
  build-depends:       base >=4.12 && <4.13, 
                       megaparsec >=9.0.1 && < 9.0.2,
                       text, vector >= 0.12.1.2,
                       containers >= 0.6.0.1
  default-language:    Haskell2010